--- a/PizzaRun/build.gradle
+++ b/PizzaRun/build.gradle
@@ -24,6 +24,7 @@ android {
 dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.0.4'
     //implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
