--- a/PizzaRun/src/main/AndroidManifest.xml
+++ b/PizzaRun/src/main/AndroidManifest.xml
@@ -18,8 +18,10 @@
         android:label="Pizza Run"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegistroActivity" />
+        <activity android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".RegistroActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".SplashScreenActivity"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
             <intent-filter>
@@ -27,7 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RecuperarContrasenaActivity" />
+        <activity android:name=".RecuperarContrasenaActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
